Fix: task_create增加force参数, task_remove

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,7 @@ export(task_queue_param_from_yaml)
 export(task_queue_param_to_yaml)
 export(task_queue_search)
 export(task_read)
+export(task_remove)
 export(task_run)
 export(task_save)
 export(task_search)
