importFrom: syms,sym,is_empty

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,9 @@ importFrom(plotly,add_pie)
 importFrom(plotly,add_trace)
 importFrom(plotly,layout)
 importFrom(plotly,plot_ly)
+importFrom(rlang,is_empty)
+importFrom(rlang,sym)
+importFrom(rlang,syms)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tibble,tribble)
