prevent-shiny-autoload: R/_disable_autoload.R

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,12 +19,12 @@ Imports:
     dplyr,
     fs,
     purrr,
-    shiny,
     arrow,
     lubridate,
     yaml,
     digest,
     stringr,
-    callr,
+    shiny,
     DT,
-    plotly
+    plotly,
+    callr
