--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,13 +102,21 @@ export(sm_ui_task)
 export(task_clone)
 export(task_create)
 export(task_dir_add)
+export(task_dir_update)
 export(task_discard)
 export(task_edit)
 export(task_expr_add)
+export(task_expr_update)
 export(task_file_add)
+export(task_file_update)
 export(task_func_add)
+export(task_func_update)
 export(task_global_add)
+export(task_global_update)
 export(task_item_add)
+export(task_item_exchange)
+export(task_item_remove)
+export(task_item_update)
 export(task_online)
 export(task_queue_init)
 export(task_queue_item)
@@ -121,7 +129,9 @@ export(task_run)
 export(task_save)
 export(task_search)
 export(task_string_add)
+export(task_string_update)
 export(task_submit)
+export(task_update)
 export(workdays)
 export(workdays_patch)
 importFrom(arrow,binary)
