--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,7 +104,7 @@ export(task_create)
 export(task_dir_add)
 export(task_dir_update)
 export(task_discard)
-export(task_edit)
+export(task_edit_snap)
 export(task_expr_add)
 export(task_expr_update)
 export(task_file_add)
