change name from: task_item_** >> script_item_**

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,22 @@ export(risk_data_set_todo)
 export(risk_data_write)
 export(risk_model_create)
 export(risk_model_search)
+export(script_dir_add)
+export(script_dir_update)
+export(script_expr_add)
+export(script_expr_update)
+export(script_file_add)
+export(script_file_update)
+export(script_func_add)
+export(script_func_update)
+export(script_item_add)
+export(script_item_exchange)
+export(script_item_remove)
+export(script_item_update)
+export(script_string_add)
+export(script_string_update)
+export(script_var_add)
+export(script_var_update)
 export(sm_choose_task_server)
 export(sm_choose_task_ui)
 export(sm_params_server)
@@ -101,22 +117,9 @@ export(sm_ui_func)
 export(sm_ui_task)
 export(task_clone)
 export(task_create)
-export(task_dir_add)
-export(task_dir_update)
 export(task_discard)
 export(task_edit_snap)
-export(task_expr_add)
-export(task_expr_update)
-export(task_file_add)
-export(task_file_update)
-export(task_func_add)
-export(task_func_update)
-export(task_global_add)
-export(task_global_update)
-export(task_item_add)
-export(task_item_exchange)
-export(task_item_remove)
-export(task_item_update)
+export(task_offline)
 export(task_online)
 export(task_queue_init)
 export(task_queue_item)
@@ -128,8 +131,6 @@ export(task_remove)
 export(task_run)
 export(task_save)
 export(task_search)
-export(task_string_add)
-export(task_string_update)
 export(task_submit)
 export(task_update)
 export(workdays)
