risk_model_create >> task_risk_model_create

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,8 +83,6 @@ export(risk_data_read)
 export(risk_data_set_done)
 export(risk_data_set_todo)
 export(risk_data_write)
-export(risk_model_create)
-export(risk_model_search)
 export(script_dir_add)
 export(script_dir_update)
 export(script_expr_add)
@@ -128,6 +126,8 @@ export(task_queue_param_to_yaml)
 export(task_queue_search)
 export(task_read)
 export(task_remove)
+export(task_risk_model_create)
+export(task_risk_model_search)
 export(task_run)
 export(task_save)
 export(task_search)
