cancel some @export

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ export(sm_task_server)
 export(sm_task_ui)
 export(sm_ui_func)
 export(sm_ui_task)
+export(task_cancel_snap)
 export(task_clone)
 export(task_create)
 export(task_discard)
@@ -121,8 +122,6 @@ export(task_offline)
 export(task_online)
 export(task_queue_init)
 export(task_queue_item)
-export(task_queue_param_from_yaml)
-export(task_queue_param_to_yaml)
 export(task_queue_search)
 export(task_read)
 export(task_remove)
