Fix: asign >> assign

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,12 @@ export(script_var_add)
 export(script_var_update)
 export(sm_choose_task_server)
 export(sm_choose_task_ui)
+export(sm_global_vars_server)
+export(sm_global_vars_ui)
+export(sm_input_assign_server)
+export(sm_input_assign_ui)
+export(sm_output_assign_server)
+export(sm_output_assign_ui)
 export(sm_params_server)
 export(sm_params_ui)
 export(sm_preview_server)
