--- a/data/funs_schema/risk.yml
+++ b/data/funs_schema/risk.yml
@@ -6,7 +6,7 @@ risk:
   functions:
     risk_data_read:
       description: 读取疑点数据
-      outputAsign: "@ds"
+      outputAssign: "@ds"
       params:
         "todoFlag":
           description: 仅返回未处理疑点数据
@@ -18,9 +18,9 @@ risk:
         "d":
           description: 要处理的数据框
           valType: tibble
-          inputAsign: "@ds"
+          inputAssign: "@ds"
         "modelId":
           description: 风险模型ID（风险模式是类型为"__RISK__"的任务）
           editType: task_search
           valType: task_name
-          inputAsign: "@modelId"
+          inputAssign: "@modelId"
