--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,8 @@ export(get_topics)
 export(import_changed)
 export(import_csv)
 export(import_csv_preview)
+export(import_files)
+export(import_files_preview)
 export(import_init)
 export(import_scan)
 export(import_search)
