Add: ds_dup_count / ds_distinct

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,9 @@ export(ds_delete)
 export(ds_demo)
 export(ds_diff_dataset)
 export(ds_diff_schema)
+export(ds_distinct)
 export(ds_drop)
+export(ds_dup_count)
 export(ds_exists)
 export(ds_files)
 export(ds_filter)
