simple-app: 从菜单或模态框选择任务ID

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ export(task_clone)
 export(task_create)
 export(task_discard)
 export(task_edit_snap)
+export(task_exists)
 export(task_offline)
 export(task_online)
 export(task_queue_init)
