在 simple-app2 中搭建新UI

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,9 @@ Imports:
     digest,
     stringr,
     shiny,
+    shiny.router,
+    shiny.semantic,
+    sortable,
     DT,
     plotly,
     callr
