转换taskId和taskName：task_id, task_name

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,8 @@ export(task_create)
 export(task_discard)
 export(task_edit_snap)
 export(task_exists)
+export(task_id)
+export(task_name)
 export(task_offline)
 export(task_online)
 export(task_queue_init)
