task_params_assign: 提取任务执行参数

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ export(task_id)
 export(task_name)
 export(task_offline)
 export(task_online)
+export(task_params_assign)
 export(task_queue_init)
 export(task_queue_item)
 export(task_queue_search)
